add intil configuration

--- a/config/config.json
+++ b/config/config.json
@@ -1,1 +1,16 @@
-{}
+{
+    "rows": [
+        {
+            "columns": [
+                {"text":"ON/OFF","type":"NEC","command":""},
+                {"text":"ON/OFF","type":"NEC","command":""}
+            ]
+        },
+        {
+            "columns": [
+                {"text":"ON/OFF","type":"NEC","command":""},
+                {"text":"ON/OFF","type":"NEC","command":""}
+            ]
+        }
+    ]
+}
